fixed css warning on mobile menu transistions

--- a/scss/03-layout/_header_and_footer.scss
+++ b/scss/03-layout/_header_and_footer.scss
@@ -161,7 +161,8 @@ header {
         text-align: center;
 
         // justify-content: center;
-        transition: 400ms
+        transition: 1000ms;
+        transform: translate(0, -1rem);
 
         a {
           display: block;
